@@ -1,14 +1,0 @@
-# ChangeLog file for MonetDB-sqlextra
-# This file is updated with Maddlog
-
-* Wed Aug 30 2017 Pedro Ferreira <pedro.ferreira@monetdbsolutions.com>
-- A column default value can be used in a UPDATE statement: UPDATE tname
-  SET cname = DEFAULT, and INSERT statements: INSERT INTO tname VALUES
-  (..., DEFAULT, ...)
-- Added TRUNCATE statements into the SQL catalog, conforming to the SQL
-  standard. In a TRUNCATE statement a 'CONTINUE IDENTITY' or 'RESTART
-  IDENTITY' clause can be passed mrestart or not, being the former the
-  default one. The options 'RESTRICT' and 'CASCADE' tell if the table has
-  foreign key references, the referencing tables should be truncated as
-  well. This happens on 'CASCADE' and 'RESTRICT' is the default behavior.
-
